공지사항 기능 구현중 - Thymeleaf에서 save dto로 가져오는 곳에서 막히는 중..

--- a/workplus/src/main/resources/templates/noticeWrite.html
+++ b/workplus/src/main/resources/templates/noticeWrite.html
@@ -1,54 +1,44 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="board/layout/basic">
 
-<script th:inline="javascript">
-/*<![CDATA[*/
-$(function () {
-
-	var formObj = $("form[role='form']");
-	console.log(formObj);
-	
-	$(".btn-primary").on("click", function(){
-		formObj.attr("action", "/samplehome/board/modify");
-		formObj.attr("method", "post");
-		formObj.submit();
-	});
-	
-	$(".btn-warning").on("click", function(){
-		formObj.attr("action", "/workplus/notice/");
-		formObj.attr("method", "get");
-		formObj.submit();
-	});
-
-  });
-
-/*]]>*/
-</script>
-
 <head>
 <title>일더하기 Work+</title>
-
 </head>
+
 <body>
 
-<h1>공지사항 글쓰기</h1>
-
-<th:block layout:fragment="content">
-		<div class="card-content">
-
-
-
-				
-				<div class="box-footer">
-	           		<button type="submit" class="btn btn-primary">Submit</button>
-	             	<button type="submit" class="btn btn-warning">Cancel</button>
-	            </div>
-
-			</form>
-		</div>
-		<!-- /.card-content -->
-	</th:block>
-
+	<h1>공지사항 글쓰기</h1>
+	
+	<!-- 
+	<th:block layout:fragment="content">
+		<form action="/workplus/notice/register.do" th:method="post">
+	        제목 : <input type="text" name="title"> <br>
+	        작성자 : <input type="text" name="writer"> <br>
+	        <textarea name="content"></textarea><br>
+	
+	        <input type="submit" value="등록">
+    	</form>
+	</th:block> -->
+	 
+	<form th:object="${noticeSaveRequestDto}" th:action="@{/workplus/notice/register.do}" method="post">
+	    제목 : <input type="text" th:field="*{title}" name="title" id="title"> <br>
+	    내용 : <input type="text" th:field="*{content}" name="content" id="content"> <br>
+	    내용 : <input type="text" th:field="*{createdDate}"> <br>
+	    내용 : <input type="text" th:field="*{deleteYn}"> <br>
+	    내용 : <input type="text" th:field="*{fileId}"> <br>
+	    내용 : <input type="text" th:field="*{updatedId}"> <br>
+	    내용 : <input type="text" th:field="*{updatedDate}"> <br>
+	    내용 : <input type="text" th:field="*{viewCnt}"> <br>
+	    내용 : <input type="text" th:field="*{writer}"> <br>
+		<button type="submit">저장</button>
+	</form>
+	
+	<!-- 
+	<form method="POST" action="/workplus/notice/register.do">
+		<input type="text" name="id1" th:value="${id2}" />
+		<input type="submit" value="Click" />
+	</form>-->
+	 
 </body>
 
 </html>
