--- a/workplus/src/main/resources/templates/noticeView.html
+++ b/workplus/src/main/resources/templates/noticeView.html
@@ -33,9 +33,12 @@
 			<td>
 				<span th:text="${notice.createdDate}"></span>
 			</td>
-		</tr>		
+		</tr>
 	</thead>
 </table>
+<a th:href="@{/workplus/notice/}">메인</a>
+<a th:href="@{/workplus/notice/delete.do(noticeSeq=${noticeResponseDto.seq})}">삭제</a>
+<a th:href="@{/workplus/notice/write.do(noticeSeq=${noticeResponseDto.seq})}">수정</a>
 
 </body>
 
