--- a/workplus/src/main/resources/templates/noticeView.html
+++ b/workplus/src/main/resources/templates/noticeView.html
@@ -23,6 +23,12 @@
 			</td>
 		</tr>
 		<tr>
+			<td>내용</td>
+			<td>
+				<span th:text="${notice.content}"></span>
+			</td>
+		</tr>
+		<tr>
 			<td>작성자</td>
 			<td>
 				<span th:text="${notice.writer}"></span>
@@ -36,7 +42,8 @@
 		</tr>
 	</thead>
 </table>
-<a th:href="@{/workplus/notice/}">메인</a>
+
+<a th:href="@{/workplus/notice/list.do}">메인</a>
 <a th:href="@{/workplus/notice/delete.do(noticeSeq=${noticeResponseDto.seq})}">삭제</a>
 <a th:href="@{/workplus/notice/write.do(noticeSeq=${noticeResponseDto.seq})}">수정</a>
 
