공지사항 기능 구현 - 글쓰기, 삭제, 수정, 리스트까지 완료 - 첨부파일 진행해야 함

--- a/workplus/src/main/resources/templates/noticeWrite.html
+++ b/workplus/src/main/resources/templates/noticeWrite.html
@@ -2,7 +2,17 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="board/layout/basic">
 
 <head>
-<title>일더하기 Work+</title>
+
+	<title>일더하기 Work+</title>
+	
+	<script src="/webjars/jquery/3.5.1/jquery.min.js"></script>
+	<script src="/webjars/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+	<script>
+	$(".custom-file-input").on("change", function() {
+	  var fileName = $(this).val().split("\\").pop();
+	  $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
+	});
+	</script>
 
 </head>
 
@@ -14,6 +24,7 @@
 		<input type="hidden" th:field="${noticeResponseDto.seq}" name="seq" id="seq">
 	    제목 : <input type="text" th:field="${noticeResponseDto.title}" name="title" id="title" > <br>
 	    내용 : <input type="text" th:field="${noticeResponseDto.content}" name="content" id="content" > <br>
+	    파일은 선택해주세요 : <input type="file" class="custom-file-input" id="customFile">
 		<div>
 			<a th:href="@{/workplus/notice/list.do}">메인</a>
 			<a href="#" onclick="document.getElementById('frm').submit();">전송</a>
@@ -23,13 +34,13 @@
 	<form th:unless="${noticeResponseDto!=null}" th:object="${noticeSaveRequestDto}" th:action="@{/workplus/notice/register.do}" method="post" id="frm">	
 	    제목 : <input type="text" th:field="*{title}" name="title" id="title"> <br>
 	    내용 : <input type="text" th:field="*{content}" name="content" id="content"> <br>
-		
+		파일은 선택해주세요 : <input name="file" type="file" class="custom-file-input" id="customFile">
 		<div>
-			<a th:href="@{/workplus/notice/}">메인</a>
+			<a th:href="@{/workplus/notice/list.do}">메인</a>
 			<a href="#" onclick="document.getElementById('frm').submit();">전송</a>
 		</div>
 	</form>
-
+	
 </body>
 
 </html>
