공지사항 기능 구현중 - 상세보기 첨부파일 출력까지 완료 - 다운로드 구현해야 함

--- a/workplus/src/main/resources/templates/noticeView.html
+++ b/workplus/src/main/resources/templates/noticeView.html
@@ -40,6 +40,14 @@
 				<span th:text="${notice.createdDate}"></span>
 			</td>
 		</tr>
+		<tr>
+			<td>파일</td>
+			<td th:if="${not #lists.isEmpty( fileList )}">
+				<a th:each="row, status : ${fileList}" >
+					[[ ${row.originFileName} ]]<br>
+				</a>
+			</td>
+		</tr>
 	</thead>
 </table>
 
