--- a/workplus/src/main/resources/templates/noticeWrite.html
+++ b/workplus/src/main/resources/templates/noticeWrite.html
@@ -20,7 +20,7 @@
             for (var i = 0; i < files.length; i++) {
                 
                 file = files[i];
- 
+
                 alert(file.name);
             }
             
@@ -38,10 +38,7 @@
 		<input type="hidden" th:field="${noticeResponseDto.seq}" name="seq" id="seq">
 	    제목 : <input type="text" th:field="${noticeResponseDto.title}" name="title" id="title" > <br>
 	    내용 : <input type="text" th:field="${noticeResponseDto.content}" name="content" id="content" > <br>
-	    <div class="form-group" id="file-list" data-name="fileDiv">
-		    <a href="#this" th:onclick="addFile()">파일추가</a><br>
-		    파일은 선택해주세요 : <input type="file" name="file" id="file"><a href='#this' th:onclick="deleteClick()" id='file-delete'>삭제</a><br>
-	    </div>
+	    첨부할 파일들을 선택하세요 : <input multiple="multiple" type="file" name="file" id="contract_file"/>
 		<div>
 			<a th:href="@{/workplus/notice/list.do}">메인</a>
 			<a href="#" onclick="document.getElementById('frm').submit();">전송</a>
@@ -52,7 +49,7 @@
 	    제목 : <input type="text" th:field="*{title}" name="title" id="title"> <br>
 	    내용 : <input type="text" th:field="*{content}" name="content" id="content"> <br>
 		첨부할 파일들을 선택하세요 : <input multiple="multiple" type="file" name="file" id="contract_file"/>
-		<div id="btnDiv">
+		<div>
 			<a th:href="@{/workplus/notice/list.do}">메인</a>
 			<a href="#" onclick="document.getElementById('frm').submit();">전송</a>
 		</div>
