공지사항 게시판 구현중 - 첨부파일 다운로드까지 구현 완료 - 첨부파일 수정 및 페이징 처리 구현 해야함

--- a/workplus/src/main/resources/templates/noticeView.html
+++ b/workplus/src/main/resources/templates/noticeView.html
@@ -43,7 +43,7 @@
 		<tr>
 			<td>파일</td>
 			<td th:if="${not #lists.isEmpty( fileList )}">
-				<a th:each="row, status : ${fileList}" >
+				<a th:href="@{'/workplus/notice/download/' + ${row.filesSeq}}" th:each="row, status : ${fileList}" >
 					[[ ${row.originFileName} ]]<br>
 				</a>
 			</td>
