--- a/workplus/src/main/resources/templates/noticeWrite.html
+++ b/workplus/src/main/resources/templates/noticeWrite.html
@@ -38,9 +38,11 @@
 		<input type="hidden" th:field="${noticeResponseDto.seq}" name="seq" id="seq">
 	    제목 : <input type="text" th:field="${noticeResponseDto.title}" name="title" id="title" > <br>
 	    내용 : <input type="text" th:field="${noticeResponseDto.content}" name="content" id="content" > <br>
-	    파일 : <a th:if="${not #lists.isEmpty( fileList )}" th:each="row, status : ${fileList}" >
-					[[ ${row.originFileName} ]]<br>
-			  </a>
+	    파일 : 
+	    <div th:if="${not #lists.isEmpty( fileList )}" th:each="row, status : ${fileList}">
+	    	  <a>[[ ${row.originFileName} ]]</a>
+			  <a th:href="@{/workplus/notice/deleteFile.do(filesSeq=${row.filesSeq}, noticeSeq=${row.categorySeq})}">파일삭제</a><br>
+		</div>	  
 	    첨부할 파일들을 선택하세요 : <input multiple="multiple" type="file" name="file" id="contract_file"/>
 		<div>
 			<a th:href="@{/workplus/notice/list.do}">메인</a>
