--- a/workplus/src/main/resources/templates/noticeList.html
+++ b/workplus/src/main/resources/templates/noticeList.html
@@ -3,22 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <title>일더하기 Work+</title>
-<link rel="stylesheet" href="/webjars/bootstrap/3.3.5/css/bootstrap.min.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+<script src="/webjars/bootstrap/3.3.4/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
 
 <h1>공지사항</h1>
 
-<table border="1" width="500" height="300">
+<table class="table table-striped">
 	<thead>
-		<tr>
-			<th>번호</th>
-			<th>제목</th>
-			<th>조회수</th>
-			<th>작성자</th>
-			<th>작성일자</th>
-		</tr>
-		<tr th:each="notice:${noticeDtoList}">
+	    <tr>
+	      <th scope="col">번호</th>
+	      <th scope="col">제목</th>
+	      <th scope="col">조회수</th>
+	      <th scope="col">작성자</th>
+	      <th scope="col">작성일자</th>
+	    </tr>
+	  </thead>
+	  <tbody>
+	    <tr th:each="notice:${noticeDtoList}">
 			<td>
 				<span th:text="${notice.seq}"></span>
 			</td>
@@ -35,42 +38,25 @@
 				<span th:text="${notice.createdDate}"></span>
 			</td>
 		</tr>
-	</thead>
-	<tbody>
-		
-	</tbody>
+ 	</tbody>
 </table>
-
-<nav>
+ 
+ <nav>
 	<div th:with="start=${T(Math).floor(noticeDtoList.number/10)*10 + 1},
                     last=(${start + 9 < noticeDtoList.totalPages ? start + 9 : noticeDtoList.totalPages})">
-        <div>
-		    <a th:href="@{list1.do(page=1)}" aria-label="First">
+		    <a th:href="@{list.do(page=1)}" aria-label="First">
 		        <span aria-hidden="true">First</span>
 		    </a>
-		</div>
-		
-		<div th:class="${noticeDtoList.first} ? 'disabled'">
-		    <a th:href="${noticeDtoList.first} ? '#' :@{list1.do(page=${noticeDtoList.number})}" aria-label="Previous">
+		    <a th:class="${noticeDtoList.first} ? 'disabled'" th:href="${noticeDtoList.first} ? '#' :@{list.do(page=${noticeDtoList.number})}" aria-label="Previous">
 		        <span aria-hidden="true">&lt;</span>
 		    </a>
-		</div>
-		
-		<div th:each="page: ${#numbers.sequence(start, last)}" th:class="${page == noticeDtoList.number + 1} ? 'active'">
-		    <a th:text="${page}" th:href="@{list1.do(page=${page})}"></a>
-		</div>
-		
-		<div th:class="${noticeDtoList.last} ? 'disabled'">
-		    <a th:href="${noticeDtoList.last} ? '#' : @{list1.do(page=${noticeDtoList.number + 2})}" aria-label="Next">
+		    <a th:each="page: ${#numbers.sequence(start, last)}" th:class="${page == noticeDtoList.number + 1} ? 'active'" th:text="${page}" th:href="@{list.do(page=${page})}"></a>
+		    <a th:class="${noticeDtoList.last} ? 'disabled'" th:href="${noticeDtoList.last} ? '#' : @{list.do(page=${noticeDtoList.number + 2})}" aria-label="Next">
 		        <span aria-hidden="true">&gt;</span>
 		    </a>
-	    </div>
-	
-		<div>
-		    <a th:href="@{list1.do(page=${noticeDtoList.totalPages})}" aria-label="Last">
+		    <a th:href="@{list.do(page=${noticeDtoList.totalPages})}" aria-label="Last">
 		        <span aria-hidden="true">Last</span>
 		    </a>
-	    </div>
 	</div>
 </nav>
 
